--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <link rel="stylesheet" href="style.css">
     <script src="/assets/main.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,6 +25,7 @@
             </form>
             <div id="tabe" ></div>
         </div>
+        <label id="test"></label>
     </center>    
 </body>
 </html>
