--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <option value="2">Difícil</option>
             </select>
             </form>
+            <input type="button" onclick="difculdade(2)" value="a">
             <div id="tabe" ></div>
         </div>
         <label id="test"></label>
