--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
-    <script src="main.js"></script>
+    <script src="/assets/main.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -45,6 +45,7 @@
 
                 <label for="dificil"> Difícil </label>
             </div>
+            <div id="tabe"></div>
         </div>         
     </center>    
 </body>
