--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="style.css">
     <script src="/assets/main.js"></script>
@@ -8,45 +9,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campo Minado</title>
 </head>
+
 <body>
-    <center>       
+    <center>
         <h1 class="titulo">Campo Minado</h1>
 
         <table id="tabela">
 
         </table>
+        <div id="tabe">
 
-        <div class="dificuldade">
+            <div class="dificuldade">
 
-            <legend>Escolha sua dificuldade:</legend>
-        </div>
+                <legend>Escolha sua dificuldade:</legend>
+            </div>
 
             <br><br>
-            
-        <div class="checkbox">
 
-            <div>
-                <input style="align-items: center;" type="checkbox" id="facil" name="dificuldade" 
-            value="Fácil" >
+            <div class="checkbox">
 
-                <label for="facil"> Fácil </label>
+                <div>
+                    <input onclick="difculdade(1)" style="align-items: center;" type="checkbox" id="facil"
+                        name="dificuldade" value="Fácil">
+
+                    <label for="facil"> Fácil </label>
+                </div>
+                <br>
+                <div>
+                    <input onclick="difculdade(2)" style="align-items: center;" type="checkbox" id="medio"
+                        name="dificuldade" value="Médio">
+
+                    <label for="medio"> Médio </label>
+                </div>
+                <br>
+                <div>
+                    <input onclick="difculdade(3)" style="align-items: center;" type="checkbox" id="dificil"
+                        name="dificuldade" value="Difícil">
+
+                    <label for="dificil"> Difícil </label>
+                </div>
             </div>
-                        <br>
-            <div>
-                <input style="align-items: center;" type="checkbox" id="medio" name="dificuldade"
-            value="Médio" >
 
-                <label for="medio"> Médio </label>
-            </div>
-                        <br>
-            <div>
-                <input style="align-items: center;"  type="checkbox" id="dificil" name="dificuldade"
-            value="Difícil">
-
-                <label for="dificil"> Difícil </label>
-            </div>
-            <div id="tabe"></div>
-        </div>         
-    </center>    
+        </div>
+        <div id="clock"></div>
+    </center>
 </body>
+
 </html>
