--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="style.css">
-    <script src="/assets/main.js"></script>
+    <link rel="stylesheet" href="assets/style.css">
+    <script src="assets/main.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,44 +14,50 @@
     <center>
         <h1 class="titulo">Campo Minado</h1>
 
-        <table id="tabela">
+        <div class="f">
+            <div class="a">
+                
+                    <label id="clock"></label>
+                
+                <div id="tabe">
 
-        </table>
-        <div id="tabe">
+                    <div class="retangulo1"></div>
 
-            <div class="dificuldade">
+                    <div class="retangulo2"></div>
 
-                <legend>Escolha sua dificuldade:</legend>
+                    <div class="dificuldade">
+
+                        <legend>Escolha sua dificuldade:</legend>
+                    </div>
+
+                    <br><br>
+
+                    <div class="checkbox">
+
+                        <div>
+                            <input onclick="difculdade(1)" style="align-items: center;" type="checkbox" id="facil"
+                                name="dificuldade" value="Fácil">
+
+                            <label for="facil" class="tabe"> Fácil </label>
+                        </div>
+                        <br>
+                        <div>
+                            <input onclick="difculdade(2)" style="align-items: center;" type="checkbox" id="medio"
+                                name="dificuldade" value="Médio">
+
+                            <label for="medio"> Médio </label>
+                        </div>
+                        <br>
+                        <div>
+                            <input onclick="difculdade(3)" style="align-items: center;" type="checkbox" id="dificil"
+                                name="dificuldade" value="Difícil">
+
+                            <label for="dificil"> Difícil </label>
+                        </div>
+                    </div>
+                </div>
             </div>
-
-            <br><br>
-
-            <div class="checkbox">
-
-                <div>
-                    <input onclick="difculdade(1)" style="align-items: center;" type="checkbox" id="facil"
-                        name="dificuldade" value="Fácil">
-
-                    <label for="facil"> Fácil </label>
-                </div>
-                <br>
-                <div>
-                    <input onclick="difculdade(2)" style="align-items: center;" type="checkbox" id="medio"
-                        name="dificuldade" value="Médio">
-
-                    <label for="medio"> Médio </label>
-                </div>
-                <br>
-                <div>
-                    <input onclick="difculdade(3)" style="align-items: center;" type="checkbox" id="dificil"
-                        name="dificuldade" value="Difícil">
-
-                    <label for="dificil"> Difícil </label>
-                </div>
-            </div>
-
         </div>
-        <div id="clock"></div>
     </center>
 </body>
 
